# switching-machine

./: MANIFEST.in  README.md  pyproject.toml
src/machine_name/: cli.py
src/switching_machine/: cli.py  config.py  machina.yaml
